--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -439,16 +439,17 @@ Verificați setările de rețea și încercați din nou."</string>
     <string name="setting_about_miui_version">Versiunea MIUI: </string>
     <string name="setting_about_summary">Versiune: </string>
     <string name="setting_accounts">Conturi Calendar</string>
+  <string name="setting_content_promotion">内容推广</string>
     <string name="setting_features_title">Setări specifice</string>
     <string name="setting_holiday_display_desc">Zilele libere apar sub agendă în pagina de pornire</string>
     <string name="setting_holiday_reminder">Arată zilele libere</string>
     <string name="setting_others">Altele</string>
+  <string name="setting_recommend">功能推荐</string>
+  <string name="setting_recommend_summary">首页订阅推荐入口</string>
   <string name="setting_sms_import">SMS-uri import evenimente</string>
     <string name="setting_title_about">Despre</string>
-  <string name="setting_title_banner_display">afișare lunar de publicitate carte de</string>
   <string name="setting_title_debug">export jurnal</string>
   <string name="setting_title_holiday_display">Arată zilele libere</string>
-  <string name="setting_title_recommend_card_display">Afișaj Abonare recomandate</string>
   <string name="setting_title_yiji_display">Almanac spectacol Taboo</string>
   <string name="setting_toast_dump_mylog_done">Construi reușește, jurnal în managerul de fișiere\"telefon/MIUI/debug_log/com.android.calendar/dump\"Dosar</string>
     <string name="show_day_view">Afişaţi ziua</string>
